feat: add endpoint to get stock ohlcv
